--- a/bonus.adoc
+++ b/bonus.adoc
@@ -1,5 +1,7 @@
 = Bonus! Using Helm Operators for Stateful Services
 
+:home: https://github.com/ammbra
+
 * <<helm_operator, Helm Operator>>
 * <<build_an_operator_from_an_existing_chart, Build an Operator from an existing chart>>
 ** <<create_and_push_the_operator_container_image,Create and push the operator container image>>
@@ -191,7 +193,7 @@ Congratulations for completing this entire workshop successfully!
 **
 
 |===
-|https://github.com/ammbra/helm-openshift-workshop/blob/develop/README.adoc[Navigate to global instructions]
+|{home}/helm-openshift-workshop/blob/develop/README.adoc[Navigate to global instructions]
 |===
 
 
