--- a/bonus.adoc
+++ b/bonus.adoc
@@ -1,6 +1,6 @@
 = Bonus! Using Helm Operators for Stateful Services
 
-:home: https://github.com/ammbra
+:home: https://github.com/IBM
 
 * <<helm_operator, Helm Operator>>
 * <<build_an_operator_from_an_existing_chart, Build an Operator from an existing chart>>
